<resources>
    <string name="app_name">Connect</string>
    <string name="title_activity_maps">Location</string>

    <string name="description">description…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="wejdź">wejdź</string>
    <string name="search">Search…</string>
    <string name="returnn">Return</string>
    <string name="contacts">Contacts:</string>
    <string name="string_map">Whole Map</string>
    <string name="string_location">Current Location</string>

    <string name="dropped_pin">Dropped Pin</string>
    <string name="your_location">Your Location</string>
    <string name="confirm_the_locations">Confirm the locations:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="enter_the_password">enter the password</string>
    <string name="enter_your_name_and_surename">enter your name and surename</string>
    <string name="re_enter_the_password">re-enter the password</string>
    <string name="enter_e_mial">enter e-mial</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="create_profil">Create profil:</string>


</resources>